--- a/ImageCatalogationJS/src/main/webapp/WEB-INF/web.xml
+++ b/ImageCatalogationJS/src/main/webapp/WEB-INF/web.xml
@@ -1,38 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-	version="3.1">
-	<display-name>ImageCatalogationJS</display-name>
-	<context-param>
-		<param-name>dbUrl</param-name>
-		<param-value>jdbc:mysql://localhost:3306/db_catalog?serverTimezone=UTC</param-value>
-	</context-param>
-	<context-param>
-		<param-name>dbUser</param-name>
-		<param-value>root</param-value>
-	</context-param>
-	<context-param>
-		<param-name>dbPassword</param-name>
-		<param-value>PASSWORD</param-value>
-	</context-param>
-	<context-param>
-		<param-name>dbDriver</param-name>
-		<param-value>com.mysql.cj.jdbc.Driver</param-value>
-	</context-param>
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-	</welcome-file-list>
-	<filter>
-    <filter-name>LoginCheckerJS</filter-name>
-    <filter-class>controllers.LoginCheckerJS</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>LoginCheckerJS</filter-name>
-    <url-pattern>/CreateCategoryJS</url-pattern>
-    <url-pattern>/GoToHomePageJS</url-pattern>
-    <url-pattern>/CheckCategoryJS</url-pattern>
-    <url-pattern>/CopyCategoryJS</url-pattern>
-    <url-pattern>/PasteCategoryJS</url-pattern>
-  </filter-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
+  <display-name>ImageCatalogation</display-name>
+  <context-param>
+    <param-name>dbUrl</param-name>
+    <param-value>jdbc:mysql://localhost:3306/db_images?serverTimezone=UTC</param-value>
+  </context-param>
+  <context-param>
+    <param-name>dbUser</param-name>
+    <param-value>root</param-value>
+  </context-param>
+  <context-param>
+    <param-name>dbPassword</param-name>
+    <param-value>PASSWORD</param-value>
+  </context-param>
+  <context-param>
+    <param-name>dbDriver</param-name>
+    <param-value>com.mysql.cj.jdbc.Driver</param-value>
+  </context-param>
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+  </welcome-file-list>
 </web-app>
